# velox

./: .staging-manifest.yaml  CMakeLists.txt  cudf_nested_field_reference_github_issue.md
.github/ISSUE_TEMPLATE/: rebase.yml
.github/scripts/: classify_phase0_changes.py  gh-api-retry.sh  test_classify_phase0_changes.py  test_phase0_workflows.py
.github/workflows/: README.md  benchmark.yml  blossom-ci.yml  breeze.yml  build-metrics.yml  build_pyvelox.yml  ci-failure-comment.yml  dependency-graph.yml  detect-force-full.yml  docker.yml  docs.yml  force-full-on-comment.yml  linux-build-base.yml  linux-build.yml  macos.yml  preliminary_checks.yml  rerun-on-force-full.yml  scheduled.yml  selective-build-comment.yml  sync-facebookincubator-main.yml  ubuntu-bundled-deps.yml
CMake/: Finducx.cmake
CMake/resolve_dependency_modules/: cudf.cmake
CMake/resolve_dependency_modules/cudf/: stats-filter-use-jit.patch
scripts/: setup-centos-adapters.sh
scripts/ci/: Jenkinsfile.premerge  run-colt-velox-premerge.sh
scripts/docker/: colt-runner.dockerfile
velox/: CMakeLists.txt
velox/common/: CMakeLists.txt  Enums.h
velox/common/file/: LocalFile.cpp
velox/connectors/: Connector.h
velox/connectors/hive/: HiveConnector.h
velox/connectors/hive/iceberg/: IcebergSplit.cpp  IcebergSplit.h
velox/core/: PlanNode.cpp  PlanNode.h  QueryConfig.cpp  QueryConfig.h
velox/core/tests/: PlanNodeBuilderTest.cpp  PlanNodeTest.cpp
velox/dwio/common/: DirectBufferedInput.cpp  DirectBufferedInput.h
velox/dwio/parquet/reader/: CMakeLists.txt  ParquetMetadataUtil.cpp  ParquetMetadataUtil.h
velox/dwio/parquet/thrift/: CompactV1ProtocolReaderWithRefill.h
velox/exec/: CMakeLists.txt  Driver.cpp  Driver.h  Exchange.cpp  Exchange.h  ExchangeClient.cpp  ExchangeClient.h  LocalPartition.cpp  LocalPartition.h  OutputBuffer.cpp  OutputBuffer.h  OutputBufferManager.cpp  OutputBufferManager.h  PartitionedOutput.cpp  PartitionedOutput.h  PlanNodeStats.cpp  PlanNodeStats.h  TableScan.cpp  TableScan.h  Task.cpp  Task.h  TopNRowNumber.cpp
velox/exec/fuzzer/: JoinFuzzer.cpp  JoinFuzzerRunner.cpp  JoinMaker.cpp  JoinMaker.h
velox/exec/tests/: TaskTest.cpp
velox/exec/tests/utils/: AssertQueryBuilder.cpp  AssertQueryBuilder.h  CMakeLists.txt
velox/exec/trace/: TraceUtil.cpp
velox/experimental/cudf/: CMakeLists.txt  CudfConfig.h
velox/experimental/cudf-exchange/: Acceptor.cpp  CMakeLists.txt  Communicator.cpp  Communicator.h  CudfExchange.cpp  CudfExchangeClient.cpp  CudfExchangeClient.h  CudfExchangeProtocol.cpp  CudfExchangeProtocol.h  CudfExchangeQueue.cpp  CudfExchangeServer.cpp  CudfExchangeServer.h  CudfExchangeSource.cpp  CudfExchangeSource.h  CudfOutputQueueManager.cpp  CudfOutputQueueManager.h  CudfPartitionedOutput.cpp  CudfQueues.cpp  CudfQueues.h  EndpointRef.cpp  EndpointRef.h  ExchangeClientFacade.cpp  ExchangeClientFacade.h  HybridExchange.cpp  HybridExchange.h  IntraNodeTransferRegistry.cpp  IntraNodeTransferRegistry.h  UcxExchange.cpp
velox/experimental/cudf-exchange/tests/: 1brc_client.cpp  1brc_server.cpp  CMakeLists.txt  CudfExchangeTest.cpp  CudfOutputQueueManagerTest.cpp  CudfPartitionedOutputMock.cpp  CudfPartitionedOutputMock.h  CudfTestData.cpp  CudfTestData.h  CudfTestHelpers.cpp  CudfTestHelpers.h  ExchangeServerMain.cpp  SinkDriverMock.cpp  SinkDriverMock.h  SourceDriverMock.cpp  WideTableExchangeServer.cpp
velox/experimental/cudf/benchmarks/: CudfTpchBenchmark.cpp  benchmark.sh
velox/experimental/cudf/exchange/: CMakeLists.txt  GpuExchange.cc  GpuExchange.h  GpuExchangeNode.h  GpuPartitionedOutput.cc  GpuPartitionedOutput.h  GpuPartitionedOutputNode.h  GpuSerializedPage.h  LocalGpuExchangeSource.cc  LocalGpuExchangeSource.h
velox/experimental/cudf/exchange/tests/: CMakeLists.txt  GpuLockStub.cc  GpuMultiFragmentTest.cc  GpuSerializedPageTest.cc  Main.cpp  TEST_SUMMARY.md
velox/experimental/cudf/exec/: AggregationRegistry.cpp  BloomFilterKernels.cu  BloomFilterKernels.h  BroadcastHashTableCache.h  CMakeLists.txt  CudfAggregation.cpp  CudfAggregation.h  CudfAssignUniqueId.cpp  CudfBatchConcat.cpp  CudfBatchConcat.h  CudfConversion.cpp  CudfConversion.h  CudfExpand.cpp  CudfExpand.h  CudfFilterProject.cpp  CudfFilterProject.h  CudfGroupby.cpp  CudfGroupby.h  CudfHashAggregation.cpp  CudfHashAggregation.h  CudfHashJoin.cpp  CudfHashJoin.h  CudfLimit.cpp  CudfLocalPartition.cpp  CudfLocalPartition.h  CudfMergeExchange.cpp  CudfMergeExchange.h  CudfNestedLoopJoin.cpp  CudfNestedLoopJoin.h  CudfOperator.h  CudfOrderBy.cpp  CudfOrderBy.h  CudfReduce.cpp  CudfReduce.h  CudfShufflePartition.cpp  CudfShufflePartition.h  CudfTopN.cpp  CudfTopN.h  CudfTopNRowNumber.cpp  CudfTopNRowNumber.h  (+30 more)
velox/experimental/cudf/expression/: ArrayAccessFunctions.cpp  AstExpression.cpp  AstExpressionUtils.h  AstUtils.h  DecimalExpressionKernels.cu  ExpressionEvaluator.cpp  ExpressionEvaluator.h  JitExpression.cpp  PrecomputeInstruction.h  SparkFunctions.cpp  SubfieldFiltersToAst.cpp
velox/experimental/cudf/kernels/: CMakeLists.txt
velox/experimental/cudf/kernels/include/velox/cudf/kernels/: TopNRowNumber.hpp
velox/experimental/cudf/kernels/src/: TopNRowNumber.cpp
velox/experimental/cudf/tests/: AdapterOperatorTest.cpp  AggregationSelectionTest.cpp  AggregationTest.cpp  BatchConcatTest.cpp  CMakeLists.txt  ConfigTest.cpp  Main.cpp  (+22 more)
velox/experimental/ucx-exchange/: Acceptor.cpp  CMakeLists.txt  CommElement.h  Communicator.cpp  Communicator.h  EndpointRef.cpp  EndpointRef.h  IntraNodeTransferRegistry.cpp  IntraNodeTransferRegistry.h  RangePartitionFunction.cpp  RangePartitionFunction.h  UcxExchangeClient.cpp  UcxExchangeClient.h  UcxExchangeProtocol.h  UcxExchangeQueue.cpp  UcxExchangeQueue.h  UcxExchangeServer.cpp  UcxExchangeServer.h  UcxExchangeSource.cpp  UcxExchangeSource.h  UcxOutputQueueManager.cpp  UcxOutputQueueManager.h  UcxPartitionedOutput.cpp  UcxPartitionedOutput.h  UcxQueues.cpp  UcxQueues.h  WorkQueue.h
velox/functions/sparksql/: Map.cpp  RegexFunctions.cpp  String.h
velox/tool/trace/: PartitionedOutputReplayer.cpp
velox/vector/arrow/: Bridge.cpp  Bridge.h
(+52 files in other folders)
